classDiagram
    %% ── L0 协议层 ──
    class DeviceInfoProtocol {
        <<protocol>> 
        +systemVersion: String
        +deviceModel: String
        +deviceName: String
        +screenHeight: CGFloat
        +isPad: Bool
        +isPhone: Bool
    }

    class URLOpenerProtocol {
        <<protocol>>
        +open(URL) async -> Bool
    }

    class ShareSheetProtocol {
        <<protocol>>
        +present(items: [Any]) async
    }

    class PasteboardProtocol {
        <<protocol>>
        +string: String?
    }

    class AppEnvironmentProtocol {
        <<protocol>>
        +deviceName: String
        +screenClass: ScreenClass
        +interactionStyle: InteractionStyle
    }

    %% ── L0 Stub 层 ──
    class StubDeviceInfoService {
        +systemVersion: String
        +deviceModel: String
        +deviceName: String
        +screenHeight: CGFloat
        +isPad: Bool
        +isPhone: Bool
    }

    class StubURLOpenerService {
        +open(URL) async -> Bool
    }

    class StubShareSheetService {
        +present(items: [Any]) async
    }

    %% ── 平台实现层 ──
    class iOSDeviceInfoService {
        +systemVersion: String
        +deviceModel: String
        +deviceName: String
        +screenHeight: CGFloat
        +isPad: Bool
        +isPhone: Bool
    }

    class MacDeviceInfoService {
        +systemVersion: String
        +deviceModel: String
        +deviceName: String
        +screenHeight: CGFloat
        +isPad: Bool
        +isPhone: Bool
    }

    class WatchDeviceInfoService {
        +systemVersion: String
        +deviceModel: String
        +deviceName: String
        +screenHeight: CGFloat
        +isPad: Bool
        +isPhone: Bool
    }

    class iOSURLOpenerService {
        +open(URL) async -> Bool
    }

    class MacURLOpenerService {
        +open(URL) async -> Bool
    }

    class WatchURLOpenerService {
        +open(URL) async -> Bool
    }

    class iOSShareSheetService {
        +present(items: [Any]) async
    }

    class MacShareSheetService {
        +present(items: [Any]) async
    }

    class WatchShareSheetService {
        +present(items: [Any]) async
    }

    %% ── DI 容器 ──
    class ServiceContainer {
        +register(T, for: T.Type)
        +resolve(T.Type) T
    }

    %% ── Registrar ──
    class iOSPlatformRegistrar {
        +registerServices(in: ServiceContainer)
    }
    class MacPlatformRegistrar {
        +registerServices(in: ServiceContainer)
    }
    class WatchPlatformRegistrar {
        +registerServices(in: ServiceContainer)
    }

    %% ── 关系 ──
    DeviceInfoProtocol <|.. iOSDeviceInfoService : implements
    DeviceInfoProtocol <|.. MacDeviceInfoService : implements
    DeviceInfoProtocol <|.. WatchDeviceInfoService : implements
    DeviceInfoProtocol <|.. StubDeviceInfoService : implements

    URLOpenerProtocol <|.. iOSURLOpenerService : implements
    URLOpenerProtocol <|.. MacURLOpenerService : implements
    URLOpenerProtocol <|.. WatchURLOpenerService : implements
    URLOpenerProtocol <|.. StubURLOpenerService : implements

    ShareSheetProtocol <|.. iOSShareSheetService : implements
    ShareSheetProtocol <|.. MacShareSheetService : implements
    ShareSheetProtocol <|.. WatchShareSheetService : implements
    ShareSheetProtocol <|.. StubShareSheetService : implements

    iOSPlatformRegistrar ..> ServiceContainer : registers into
    MacPlatformRegistrar ..> ServiceContainer : registers into
    WatchPlatformRegistrar ..> ServiceContainer : registers into
